@@ -18,15 +18,11 @@
  */
 package org.dependencytrack.resources.v1;
 
-import alpine.common.logging.Logger;
-import alpine.event.framework.Event;
 import alpine.model.ApiKey;
 import alpine.model.Team;
 import alpine.model.User;
 import alpine.persistence.PaginatedResult;
 import alpine.server.auth.PermissionRequired;
-import alpine.server.filters.ResourceAccessRequired;
-import io.jsonwebtoken.lang.Collections;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.headers.Header;
@@ -38,6 +34,7 @@ import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import io.swagger.v3.oas.annotations.security.SecurityRequirements;
 import jakarta.validation.Validator;
+import jakarta.validation.constraints.Size;
 import jakarta.ws.rs.ClientErrorException;
 import jakarta.ws.rs.Consumes;
 import jakarta.ws.rs.DELETE;
@@ -54,17 +51,19 @@ import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
 import org.apache.commons.lang3.StringUtils;
 import org.dependencytrack.auth.Permissions;
-import org.dependencytrack.event.CloneProjectEvent;
 import org.dependencytrack.model.Classifier;
 import org.dependencytrack.model.Project;
+import org.dependencytrack.model.ProjectCollectionLogic;
 import org.dependencytrack.model.Tag;
-import org.dependencytrack.model.WorkflowState;
-import org.dependencytrack.model.WorkflowStatus;
-import org.dependencytrack.model.WorkflowStep;
 import org.dependencytrack.model.validation.ValidUuid;
+import org.dependencytrack.notification.JdoNotificationEmitter;
+import org.dependencytrack.notification.NotificationModelConverter;
 import org.dependencytrack.persistence.QueryManager;
+import org.dependencytrack.persistence.jdbi.MetricsDao;
 import org.dependencytrack.persistence.jdbi.ProjectDao;
 import org.dependencytrack.persistence.jdbi.ProjectDao.ConciseProjectListRow;
+import org.dependencytrack.persistence.jdbi.command.CloneProjectCommand;
+import org.dependencytrack.persistence.jdbi.query.ListProjectsConciseQuery;
 import org.dependencytrack.resources.AbstractApiResource;
 import org.dependencytrack.resources.v1.openapi.PaginatedApi;
 import org.dependencytrack.resources.v1.problems.ProblemDetails;
@@ -72,11 +71,14 @@ import org.dependencytrack.resources.v1.vo.BomUploadResponse;
 import org.dependencytrack.resources.v1.vo.CloneProjectRequest;
 import org.dependencytrack.resources.v1.vo.ConciseProject;
 import org.jdbi.v3.core.Handle;
+import org.owasp.security.logging.SecurityMarkers;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import javax.jdo.FetchGroup;
 import java.security.Principal;
 import java.util.Collection;
-import java.util.Date;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -86,8 +88,11 @@ import java.util.UUID;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
 
+import static java.util.Objects.requireNonNullElse;
 import static java.util.Objects.requireNonNullElseGet;
+import static org.dependencytrack.notification.api.NotificationFactory.createProjectCreatedNotification;
 import static org.dependencytrack.persistence.jdbi.JdbiFactory.createLocalJdbi;
+import static org.dependencytrack.persistence.jdbi.JdbiFactory.inJdbiTransaction;
 import static org.dependencytrack.persistence.jdbi.JdbiFactory.withJdbiHandle;
 import static org.dependencytrack.util.PersistenceUtil.isPersistent;
 import static org.dependencytrack.util.PersistenceUtil.isUniqueConstraintViolation;
@@ -106,7 +111,7 @@ import static org.dependencytrack.util.PersistenceUtil.isUniqueConstraintViolati
 })
 public class ProjectResource extends AbstractApiResource {
 
-    private static final Logger LOGGER = Logger.getLogger(ProjectResource.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(ProjectResource.class);
 
     @GET
     @Produces(MediaType.APPLICATION_JSON)
@@ -125,7 +130,6 @@ public class ProjectResource extends AbstractApiResource {
             @ApiResponse(responseCode = "401", description = "Unauthorized")
     })
     @PermissionRequired(Permissions.Constants.VIEW_PORTFOLIO)
-    @ResourceAccessRequired
     public Response getProjects(@Parameter(description = "The optional name of the project to query on")
                                 @QueryParam("name") String name,
                                 @Parameter(description = "Optionally excludes inactive projects from being returned")
@@ -144,7 +148,7 @@ public class ProjectResource extends AbstractApiResource {
             }
             final PaginatedResult projectPages = withJdbiHandle(getAlpineRequest(), handle ->
                     (name != null) ? handle.attach(ProjectDao.class).getProjects(name, null, null, null, notAssignedToTeamWithUuid, excludeInactive, onlyRoot, false)
-                    : handle.attach(ProjectDao.class).getProjects(null, null, null, null, notAssignedToTeamWithUuid, excludeInactive, onlyRoot, true));
+                            : handle.attach(ProjectDao.class).getProjects(null, null, null, null, notAssignedToTeamWithUuid, excludeInactive, onlyRoot, true));
             return Response.ok(projectPages.getObjects()).header(TOTAL_COUNT_HEADER, projectPages.getTotal()).build();
         }
     }
@@ -167,7 +171,6 @@ public class ProjectResource extends AbstractApiResource {
             @ApiResponse(responseCode = "401", description = "Unauthorized")
     })
     @PermissionRequired(Permissions.Constants.VIEW_PORTFOLIO)
-    @ResourceAccessRequired
     public Response getProjectsConcise(
             @Parameter(description = "Name to filter on. Must be exact match.")
             @QueryParam("name") final String nameFilter,
@@ -186,8 +189,19 @@ public class ProjectResource extends AbstractApiResource {
             @Parameter(description = "Whether to include metrics in the response.")
             @QueryParam("includeMetrics") final boolean includeMetrics
     ) {
-        final List<ConciseProjectListRow> projectRows = withJdbiHandle(getAlpineRequest(), handle -> handle.attach(ProjectDao.class)
-                .getPageConcise(nameFilter, versionFilter, classifierFilter, tagFilter, teamFilter, activeFilter, onlyRootFilter, /* parentUuidFilter */ null, includeMetrics));
+        final List<ConciseProjectListRow> projectRows = withJdbiHandle(
+                getAlpineRequest(),
+                handle -> handle
+                        .attach(ProjectDao.class)
+                        .getPageConcise(new ListProjectsConciseQuery()
+                                .withNameFilter(nameFilter)
+                                .withVersionFilter(versionFilter)
+                                .withClassifierFilter(classifierFilter)
+                                .withTagFilter(tagFilter)
+                                .withTeamFilter(teamFilter)
+                                .withActiveFilter(activeFilter)
+                                .withOnlyRootFilter(onlyRootFilter)
+                                .withIncludeMetrics(includeMetrics)));
 
         final long totalCount = projectRows.isEmpty() ? 0 : projectRows.getFirst().totalCount();
         final List<ConciseProject> projects = projectRows.stream().map(ConciseProject::new).toList();
@@ -212,7 +226,6 @@ public class ProjectResource extends AbstractApiResource {
             @ApiResponse(responseCode = "401", description = "Unauthorized")
     })
     @PermissionRequired(Permissions.Constants.VIEW_PORTFOLIO)
-    @ResourceAccessRequired
     public Response getProjectChildrenConcise(
             @Parameter(description = "UUID of the project", required = true)
             @PathParam("uuid") final String parentUuid,
@@ -231,8 +244,19 @@ public class ProjectResource extends AbstractApiResource {
             @Parameter(description = "Whether to include metrics in the response.")
             @QueryParam("includeMetrics") final boolean includeMetrics
     ) {
-        final List<ConciseProjectListRow> projectRows = withJdbiHandle(getAlpineRequest(), handle -> handle.attach(ProjectDao.class)
-                .getPageConcise(nameFilter, versionFilter, classifierFilter, tagFilter, teamFilter, activeFilter, /* onlyRootFilter */ null, UUID.fromString(parentUuid), includeMetrics));
+        final List<ConciseProjectListRow> projectRows = withJdbiHandle(
+                getAlpineRequest(),
+                handle -> handle
+                        .attach(ProjectDao.class)
+                        .getPageConcise(new ListProjectsConciseQuery()
+                                .withNameFilter(nameFilter)
+                                .withVersionFilter(versionFilter)
+                                .withClassifierFilter(classifierFilter)
+                                .withTagFilter(tagFilter)
+                                .withTeamFilter(teamFilter)
+                                .withActiveFilter(activeFilter)
+                                .withParentUuidFilter(UUID.fromString(parentUuid))
+                                .withIncludeMetrics(includeMetrics)));
 
         final long totalCount = projectRows.isEmpty() ? 0 : projectRows.getFirst().totalCount();
         final List<ConciseProject> projects = projectRows.stream().map(ConciseProject::new).toList();
@@ -260,7 +284,6 @@ public class ProjectResource extends AbstractApiResource {
             @ApiResponse(responseCode = "404", description = "The project could not be found")
     })
     @PermissionRequired(Permissions.Constants.VIEW_PORTFOLIO)
-    @ResourceAccessRequired
     public Response getProject(
             @Parameter(description = "The UUID of the project to retrieve", schema = @Schema(type = "string", format = "uuid"), required = true)
             @PathParam("uuid") @ValidUuid String uuid) {
@@ -296,7 +319,6 @@ public class ProjectResource extends AbstractApiResource {
             @ApiResponse(responseCode = "404", description = "The project could not be found")
     })
     @PermissionRequired(Permissions.Constants.VIEW_PORTFOLIO)
-    @ResourceAccessRequired
     public Response getLatestProjectByName(
             @Parameter(description = "The name of the project to retrieve the latest version of", required = true)
             @PathParam("name") String name) {
@@ -333,7 +355,6 @@ public class ProjectResource extends AbstractApiResource {
             @ApiResponse(responseCode = "404", description = "The project could not be found")
     })
     @PermissionRequired(Permissions.Constants.VIEW_PORTFOLIO)
-    @ResourceAccessRequired
     public Response getProject(
             @Parameter(description = "The name of the project to query on", required = true)
             @QueryParam("name") String name,
@@ -368,7 +389,6 @@ public class ProjectResource extends AbstractApiResource {
             @ApiResponse(responseCode = "401", description = "Unauthorized")
     })
     @PermissionRequired(Permissions.Constants.VIEW_PORTFOLIO)
-    @ResourceAccessRequired
     public Response getProjectsByTag(
             @Parameter(description = "The tag to query on", required = true)
             @PathParam("tag") String tagString,
@@ -399,7 +419,6 @@ public class ProjectResource extends AbstractApiResource {
             @ApiResponse(responseCode = "401", description = "Unauthorized")
     })
     @PermissionRequired(Permissions.Constants.VIEW_PORTFOLIO)
-    @ResourceAccessRequired
     public Response getProjectsByClassifier(
             @Parameter(description = "The classifier to query on", required = true)
             @PathParam("classifier") String classifierString,
@@ -462,18 +481,21 @@ public class ProjectResource extends AbstractApiResource {
                 validator.validateProperty(jsonProject, "description"),
                 validator.validateProperty(jsonProject, "version"),
                 validator.validateProperty(jsonProject, "classifier"),
+                validator.validateProperty(jsonProject, "collectionLogic"),
                 validator.validateProperty(jsonProject, "cpe"),
                 validator.validateProperty(jsonProject, "purl"),
                 validator.validateProperty(jsonProject, "swidTagId"),
                 validator.validateProperty(jsonProject, "accessTeams")
         );
-        if (jsonProject.getClassifier() == null) {
+        if (jsonProject.getCollectionLogic() != null) {
+            jsonProject.setClassifier(null);
+        } else if (jsonProject.getClassifier() == null) {
             jsonProject.setClassifier(Classifier.APPLICATION);
         }
         try (final var qm = new QueryManager()) {
-            if(jsonProject.isLatest()) {
+            if (jsonProject.isLatest()) {
                 final Project oldLatest = qm.getLatestProjectVersion(jsonProject.getName());
-                if(oldLatest != null) {
+                if (oldLatest != null) {
                     requireAccess(qm, oldLatest);
                 }
             }
@@ -512,7 +534,7 @@ public class ProjectResource extends AbstractApiResource {
                     } else if (principal instanceof final ApiKey apiKey) {
                         userTeams = apiKey.getTeams();
                     } else {
-                        userTeams = Collections.emptyList();
+                        userTeams = List.of();
                     }
 
                     boolean isAdmin = qm.hasAccessManagementPermission(principal);
@@ -532,9 +554,9 @@ public class ProjectResource extends AbstractApiResource {
                             throw new ClientErrorException(Response
                                     .status(Response.Status.BAD_REQUEST)
                                     .entity("""
-                                        The team with %s can not be assigned because it does not exist, \
-                                        or is not accessible to the authenticated principal.\
-                                        """.formatted(chosenTeam.getUuid() != null
+                                            The team with %s can not be assigned because it does not exist, \
+                                            or is not accessible to the authenticated principal.\
+                                            """.formatted(chosenTeam.getUuid() != null
                                             ? "UUID " + chosenTeam.getUuid()
                                             : "name " + chosenTeam.getName()))
                                     .build());
@@ -554,8 +576,8 @@ public class ProjectResource extends AbstractApiResource {
                 } catch (IllegalArgumentException e) {
                     LOGGER.debug("Failed to create project %s".formatted(jsonProject), e);
                     throw new ClientErrorException(Response
-                            .status(Response.Status.CONFLICT)
-                            .entity("An inactive Parent cannot be selected as parent")
+                            .status(Response.Status.BAD_REQUEST)
+                            .entity(e.getMessage())
                             .build());
                 } catch (RuntimeException e) {
                     if (isUniqueConstraintViolation(e)) {
@@ -568,10 +590,15 @@ public class ProjectResource extends AbstractApiResource {
                     LOGGER.error("Failed to create project %s".formatted(jsonProject), e);
                     throw new ServerErrorException(Response.Status.INTERNAL_SERVER_ERROR);
                 }
+
+                new JdoNotificationEmitter(qm).emit(
+                        createProjectCreatedNotification(
+                                NotificationModelConverter.convert(project)));
+
                 return project;
             });
 
-            LOGGER.info("Project " + createdProject + " created by " + super.getPrincipal().getName());
+            LOGGER.info("Project {} created by {}", createdProject, super.getPrincipal().getName());
             return Response.status(Response.Status.CREATED).entity(createdProject).build();
         }
     }
@@ -614,11 +641,14 @@ public class ProjectResource extends AbstractApiResource {
                 validator.validateProperty(jsonProject, "description"),
                 validator.validateProperty(jsonProject, "version"),
                 validator.validateProperty(jsonProject, "classifier"),
+                validator.validateProperty(jsonProject, "collectionLogic"),
                 validator.validateProperty(jsonProject, "cpe"),
                 validator.validateProperty(jsonProject, "purl"),
                 validator.validateProperty(jsonProject, "swidTagId")
         );
-        if (jsonProject.getClassifier() == null) {
+        if (jsonProject.getCollectionLogic() != null) {
+            jsonProject.setClassifier(null);
+        } else if (jsonProject.getClassifier() == null) {
             jsonProject.setClassifier(Classifier.APPLICATION);
         }
         try (final var qm = new QueryManager()) {
@@ -649,9 +679,17 @@ public class ProjectResource extends AbstractApiResource {
                 // if project is newly set to latest, ensure user has access to current latest version to modify it
                 if (jsonProject.isLatest() && !project.isLatest()) {
                     final Project oldLatest = qm.getLatestProjectVersion(name);
-                    if(oldLatest != null) {
+                    if (oldLatest != null) {
                         requireAccess(qm, oldLatest);
                     }
+                }
+
+                if (jsonProject.getCollectionLogic() == ProjectCollectionLogic.AGGREGATE_DIRECT_CHILDREN_WITH_TAG
+                        && jsonProject.getCollectionTag() == null) {
+                    throw new ClientErrorException(Response
+                            .status(Response.Status.BAD_REQUEST)
+                            .entity("A collection tag must be specified for AGGREGATE_DIRECT_CHILDREN_WITH_TAG logic.")
+                            .build());
                 }
 
                 try {
@@ -668,10 +706,9 @@ public class ProjectResource extends AbstractApiResource {
                 }
             });
 
-            LOGGER.info("Project " + updatedProject + " updated by " + super.getPrincipal().getName());
+            LOGGER.info("Project {} updated by {}", updatedProject, super.getPrincipal().getName());
             return Response.ok(updatedProject).build();
-        }
-        catch (RuntimeException e) {
+        } catch (RuntimeException e) {
             if (isUniqueConstraintViolation(e)) {
                 throw new ClientErrorException(Response
                         .status(Response.Status.CONFLICT)
@@ -724,6 +761,7 @@ public class ProjectResource extends AbstractApiResource {
                 validator.validateProperty(jsonProject, "description"),
                 validator.validateProperty(jsonProject, "version"),
                 validator.validateProperty(jsonProject, "classifier"),
+                validator.validateProperty(jsonProject, "collectionLogic"),
                 validator.validateProperty(jsonProject, "cpe"),
                 validator.validateProperty(jsonProject, "purl"),
                 validator.validateProperty(jsonProject, "swidTagId")
@@ -743,7 +781,7 @@ public class ProjectResource extends AbstractApiResource {
                 if (jsonProject.isLatest() && !project.isLatest()) {
                     final var oldName = jsonProject.getName() != null ? jsonProject.getName() : project.getName();
                     final Project oldLatest = qm.getLatestProjectVersion(oldName);
-                    if(oldLatest != null) {
+                    if (oldLatest != null) {
                         requireAccess(qm, oldLatest);
                     }
                 }
@@ -757,6 +795,8 @@ public class ProjectResource extends AbstractApiResource {
                 modified |= setIfDifferent(jsonProject, project, Project::getGroup, Project::setGroup);
                 modified |= setIfDifferent(jsonProject, project, Project::getDescription, Project::setDescription);
                 modified |= setIfDifferent(jsonProject, project, Project::getClassifier, Project::setClassifier);
+                modified |= setIfDifferent(jsonProject, project, Project::getCollectionLogic, Project::setCollectionLogic);
+                modified |= setIfDifferent(jsonProject, project, Project::getCollectionTag, Project::setCollectionTag);
                 modified |= setIfDifferent(jsonProject, project, Project::getCpe, Project::setCpe);
                 modified |= setIfDifferent(jsonProject, project, Project::getPurl, Project::setPurl);
                 modified |= setIfDifferent(jsonProject, project, Project::getSwidTagId, Project::setSwidTagId);
@@ -764,6 +804,10 @@ public class ProjectResource extends AbstractApiResource {
                 modified |= setIfDifferent(jsonProject, project, Project::getSupplier, Project::setSupplier);
                 modified |= setIfDifferent(jsonProject, project, Project::isLatest, Project::setIsLatest);
                 modified |= setIfDifferent(jsonProject, project, Project::isActive, Project::setActive);
+                if (project.getCollectionLogic() != null && project.getClassifier() != null) {
+                    project.setClassifier(null);
+                    modified = true;
+                }
                 if (jsonProject.getParent() != null && jsonProject.getParent().getUuid() != null) {
                     final Project parent = qm.getObjectByUuid(Project.class, jsonProject.getParent().getUuid());
                     if (parent == null) {
@@ -787,6 +831,14 @@ public class ProjectResource extends AbstractApiResource {
 
                 if (!modified) {
                     return null;
+                }
+
+                if (project.getCollectionLogic() == ProjectCollectionLogic.AGGREGATE_DIRECT_CHILDREN_WITH_TAG
+                        && project.getCollectionTag() == null) {
+                    throw new ClientErrorException(Response
+                            .status(Response.Status.BAD_REQUEST)
+                            .entity("A collection tag must be specified for AGGREGATE_DIRECT_CHILDREN_WITH_TAG logic.")
+                            .build());
                 }
 
                 try {
@@ -814,7 +866,7 @@ public class ProjectResource extends AbstractApiResource {
                 return Response.notModified().build();
             }
 
-            LOGGER.info("Project " + updatedProject + " updated by " + super.getPrincipal().getName());
+            LOGGER.info("Project {} updated by {}", updatedProject, super.getPrincipal().getName());
             return Response.ok(updatedProject).build();
         }
     }
@@ -823,7 +875,7 @@ public class ProjectResource extends AbstractApiResource {
      * returns `true` if the given [updated] collection should be considered an update of the [original] collection.
      */
     private static <T> boolean isCollectionModified(Collection<T> updated, Collection<T> original) {
-        return updated != null && (!Collections.isEmpty(updated) || !Collections.isEmpty(original));
+        return updated != null && (!updated.isEmpty() || !requireNonNullElse(original, Collections.emptyList()).isEmpty());
     }
 
     /**
@@ -884,7 +936,7 @@ public class ProjectResource extends AbstractApiResource {
                 }
                 requireAccess(qm, project);
 
-                LOGGER.info("Project " + project + " deletion request by " + super.getPrincipal().getName());
+                LOGGER.info("Project {} deletion request by {}", project, super.getPrincipal().getName());
 
                 try (final Handle jdbiHandle = createLocalJdbi(qm).open()) {
                     final var projectDao = jdbiHandle.attach(ProjectDao.class);
@@ -899,13 +951,42 @@ public class ProjectResource extends AbstractApiResource {
         return Response.status(Response.Status.NO_CONTENT).build();
     }
 
+    @POST
+    @Path("/batchDelete")
+    @Consumes(MediaType.APPLICATION_JSON)
+    @Produces(MediaType.APPLICATION_JSON)
+    @Operation(
+            summary = "Deletes a list of projects specified by their UUIDs",
+            description = "<p>Requires permission <strong>PORTFOLIO_MANAGEMENT</strong> or <strong>PORTFOLIO_MANAGEMENT_DELETE</strong></p>"
+    )
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "204", description = "Projects removed successfully"),
+            @ApiResponse(responseCode = "401", description = "Unauthorized")
+    })
+    @PermissionRequired({
+            Permissions.Constants.PORTFOLIO_MANAGEMENT,
+            Permissions.Constants.PORTFOLIO_MANAGEMENT_DELETE
+    })
+    public Response deleteProjects(@Size(min = 1, max = 1000) final Set<UUID> uuids) {
+        final Set<UUID> deletedProjectUuids = inJdbiTransaction(
+                getAlpineRequest(),
+                handle -> handle.attach(ProjectDao.class).deleteProjects(uuids));
+        for (final UUID uuid : deletedProjectUuids) {
+            LOGGER.info(SecurityMarkers.SECURITY_AUDIT, "Deleted project {}", uuid);
+        }
+        return Response.status(Response.Status.NO_CONTENT).build();
+    }
+
     @PUT
     @Path("/clone")
+    @Deprecated(since = "5.7.0")
     @Consumes(MediaType.APPLICATION_JSON)
     @Produces(MediaType.APPLICATION_JSON)
     @Operation(
             summary = "Clones a project",
-            description = "<p>Requires permission <strong>PORTFOLIO_MANAGEMENT</strong> or <strong>PORTFOLIO_MANAGEMENT_CREATE</strong></p>"
+            description = """
+                    <p>Requires permission <strong>PORTFOLIO_MANAGEMENT</strong> or <strong>PORTFOLIO_MANAGEMENT_CREATE</strong></p>
+                    <p><strong>Deprecated</strong>! Use <code>/api/v2/projects/{uuid}/clone</code> instead.</p>"""
     )
     @ApiResponses(value = {
             @ApiResponse(
@@ -928,7 +1009,7 @@ public class ProjectResource extends AbstractApiResource {
                 validator.validateProperty(jsonRequest, "version")
         );
         try (final var qm = new QueryManager()) {
-            final CloneProjectEvent cloneEvent = qm.callInTransaction(() -> {
+            qm.runInTransaction(() -> {
                 final Project sourceProject = qm.getObjectByUuid(Project.class, jsonRequest.getProject(), Project.FetchGroup.ALL.name());
                 if (sourceProject == null) {
                     throw new ClientErrorException(Response
@@ -946,25 +1027,39 @@ public class ProjectResource extends AbstractApiResource {
                 // if project is newly set to latest, ensure user has access to current latest version to modify it
                 if (jsonRequest.makeCloneLatest() && !sourceProject.isLatest()) {
                     final Project oldLatest = qm.getLatestProjectVersion(sourceProject.getName());
-                    if(oldLatest != null) {
+                    if (oldLatest != null) {
                         requireAccess(qm, oldLatest);
                     }
                 }
 
-                LOGGER.info("Project " + sourceProject + " is being cloned by " + super.getPrincipal().getName());
-                final var event = new CloneProjectEvent(jsonRequest);
-                final var workflowState = new WorkflowState();
-                workflowState.setStep(WorkflowStep.PROJECT_CLONE);
-                workflowState.setStatus(WorkflowStatus.PENDING);
-                workflowState.setToken(event.getChainIdentifier());
-                workflowState.setUpdatedAt(new Date());
-                qm.persist(workflowState);
-
-                return event;
+                LOGGER.info("Project {} is being cloned by {}", sourceProject, super.getPrincipal().getName());
             });
 
-            Event.dispatch(cloneEvent);
-            return Response.accepted(Map.of("token", cloneEvent.getChainIdentifier())).build();
+            final UUID sourceProjectUuid = UUID.fromString(jsonRequest.getProject());
+            inJdbiTransaction(handle -> {
+                final UUID clonedProjectUuid = handle.attach(ProjectDao.class).cloneProject(
+                        new CloneProjectCommand(
+                                sourceProjectUuid,
+                                jsonRequest.getVersion(),
+                                jsonRequest.makeCloneLatest(),
+                                jsonRequest.includeACL(),
+                                jsonRequest.includeComponents(),
+                                // NB: For legacy reasons, includeAuditHistory implies includeFindings.
+                                /* includeFindings */ jsonRequest.includeAuditHistory(),
+                                /* includeFindingsAuditHistory */ jsonRequest.includeAuditHistory(),
+                                // NB: For legacy reasons, includePolicyViolations implies includePolicyViolationsAuditHistory.
+                                jsonRequest.includePolicyViolations(),
+                                /* includePolicyViolationsAuditHistory */ jsonRequest.includePolicyViolations(),
+                                jsonRequest.includeProperties(),
+                                jsonRequest.includeServices(),
+                                jsonRequest.includeTags()));
+                handle.attach(MetricsDao.class).updateProjectMetrics(clonedProjectUuid);
+                return clonedProjectUuid;
+            });
+
+            // NB: For legacy reasons, we still return an event token.
+            // At the time when clients get this, the clone has already succeeded.
+            return Response.accepted(Map.of("token", UUID.randomUUID())).build();
         }
     }
 
@@ -992,7 +1087,6 @@ public class ProjectResource extends AbstractApiResource {
             @ApiResponse(responseCode = "404", description = "The UUID of the project could not be found")
     })
     @PermissionRequired(Permissions.Constants.VIEW_PORTFOLIO)
-    @ResourceAccessRequired
     public Response getChildrenProjects(@Parameter(description = "The UUID of the project to get the children from", schema = @Schema(type = "string", format = "uuid"), required = true)
                                         @PathParam("uuid") @ValidUuid String uuid,
                                         @Parameter(description = "Optionally excludes inactive projects from being returned", required = false)
@@ -1032,7 +1126,6 @@ public class ProjectResource extends AbstractApiResource {
             @ApiResponse(responseCode = "404", description = "The UUID of the project could not be found")
     })
     @PermissionRequired(Permissions.Constants.VIEW_PORTFOLIO)
-    @ResourceAccessRequired
     public Response getChildrenProjectsByClassifier(
             @Parameter(description = "The classifier to query on", required = true)
             @PathParam("classifier") String classifierString,
@@ -1076,7 +1169,6 @@ public class ProjectResource extends AbstractApiResource {
             @ApiResponse(responseCode = "404", description = "The UUID of the project could not be found")
     })
     @PermissionRequired(Permissions.Constants.VIEW_PORTFOLIO)
-    @ResourceAccessRequired
     public Response getChildrenProjectsByTag(
             @Parameter(description = "The tag to query on", required = true)
             @PathParam("tag") String tagString,
@@ -1120,7 +1212,6 @@ public class ProjectResource extends AbstractApiResource {
             @ApiResponse(responseCode = "404", description = "The UUID of the project could not be found")
     })
     @PermissionRequired(Permissions.Constants.VIEW_PORTFOLIO)
-    @ResourceAccessRequired
     public Response getProjectsWithoutDescendantsOf(
             @Parameter(description = "The UUID of the project which descendants will be excluded", schema = @Schema(type = "string", format = "uuid"), required = true)
             @PathParam("uuid") @ValidUuid String uuid,
